--- a/main.css
+++ b/main.css
@@ -28,7 +28,9 @@ nav {
 	width: 100%;
 	height: 522px;
 	background: #106db3;
-	
+	background-size: 100% 522px;
+	background-image: url(http://bgfons.com/upload/waves_texture2418.jpg);
+	box-shadow: inset 0px 0px 0 2000px rgba(17,117,192,0.8 );
 }
 
 .company-name {
