--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ nav {
 
 p {
 	color: #5e686f;
+	font-family: 'Asap';
 }
 
 .container {
@@ -31,20 +32,20 @@ p {
 
 .header	{
 	width: 100%;
-	height: 522px;
+	height: 523px;
 	background: #106db3;
-	background-size: 100% 522px;
+	background-size: 100% 523px;
 	background-image: url(http://bgfons.com/upload/waves_texture2418.jpg);
 	box-shadow: inset 0px 0px 0 2000px rgba(17,117,192,0.8 );
 }
 
 .company-name {
 	display: inline-block;
-	padding-top: 	26px;
+	padding-top: 	22px;
 	color: #083452;
 	font-family: 'Asap';
 	margin-left: 29px;
-
+	font-size: 17px;
 }
 
 .top-nav {
@@ -55,7 +56,7 @@ p {
 	list-style: none;
 	position: absolute;
 	right: 0;
-	margin: 26px 20px 0 0;
+	margin: 17px 20px 0 0;
 }
 
 .about {
@@ -70,7 +71,7 @@ p {
 }
 
 .container-2 {
-	padding-top: 176px;
+	padding-top: 184px;
 	width: 960px;
 	margin: 0 auto;
 }
@@ -79,7 +80,7 @@ p {
 	text-align: center;
 	width: 960px;
 	margin: 0 auto;
-	font-size: 110px;
+	font-size: 107px;
 	color: white;
 	font-family: 'PT Sans Narrow';
 	text-shadow: 1px 1px 3px #242F48;
@@ -89,12 +90,12 @@ p {
 
 .sub-title {
 	text-align: center;
-	font-size: 14px;
+	font-size: 15px;
 	letter-spacing: 2px;
 	color: #083452;
 	font-family: 'Asap';
 	font-weight: bolder;
-	margin-top: 4px;
+	margin-top: 3px;
 }
 
 .container-3 {
@@ -104,7 +105,7 @@ p {
 
 .main-body {
 	display: inline-block;
-	font-size: 24px;
+	font-size: 17px;
 	width: 65%;
 	height: 1000px;
 }
@@ -112,10 +113,10 @@ p {
 .fantastic {
 	font-weight: bolder;
 	color: #083452;
-}
-
-.indent {
-	padding-left: 25px;
+	font-family: 'Oswald';
+	font-size: 30px;
+	padding-top: 22px;
+	line-height: 70px;
 }
 
 blockquote {
