--- a/main.css
+++ b/main.css
@@ -30,6 +30,10 @@ p {
 	position: relative;
 }
 
+.1st-paragraph {
+	padding-top: 10px;
+}
+
 .header	{
 	width: 100%;
 	height: 523px;
@@ -110,12 +114,14 @@ p {
 	height: 1000px;
 }
 
+p{}
+
 .fantastic {
 	font-weight: bolder;
 	color: #083452;
 	font-family: 'Oswald';
-	font-size: 30px;
-	padding-top: 22px;
+	font-size: 31px;
+	padding-top: 20px;
 	line-height: 70px;
 }
 
@@ -124,18 +130,39 @@ blockquote {
 }
 
 .r-side-body {
+	position: relative;
 	display: inline-block;
 	width: 34%;
 	height: 1000px;
 }
 
 .side-body-1 {
-	padding-top: 60px;
+	padding-top: 83px;
 	text-align: center;
 }
 
+.anne-marie {
+	margin-top: 12px;
+	text-align: center;
+	font-family: 'Asap';
+	color: #106db3;
+	font-size: 17px;
+}
+
+.contact-anne {
+	position: absolute;
+	width: 100%;
+	margin: auto;
+	/*display: inline-block;*/
+	text-align: center;
+	font-family: 'Asap';
+	font-size: 13px;
+	color: #d3d3d3;
+	padding-top: 3px;
+}
+
 .side-body-2 {
-	padding-top: 70px;
+	padding-top: 71px;
 	text-align: center;
 }
 	
