--- a/main.css
+++ b/main.css
@@ -178,6 +178,7 @@ blockquote {
 	display: inline-block;
 	width: 34%;
 	height: 1000px;
+	margin-left: 5px;
 }
 
 .side-body-1 {
@@ -207,7 +208,17 @@ blockquote {
 
 .side-body-2 {
 	padding-top: 71px;
-	text-align: center;
+	text-align: right;
+	display: block;
+}
+
+.side-body-2 span {
+	font-size: 14px;
+	font-family: 'Asap';
+	color: #a3b3bf;
+	text-decoration: underline;
+	display: block;
+	padding-top: 8px;
 }
 	
 .side-body-3 {
