--- a/main.css
+++ b/main.css
@@ -268,14 +268,21 @@ h3 {
 
 .footer-1 {
 	float: left;
-	/*position: absolute;*/
 	width: 25%;
 	height: 330px;
 	background-image: url(http://voiceofsandiego.org/wp-content/uploads/6f4af864-56c6-5ac0-8966-91b35602f9ee.image.jpg);
 	font-family: 'Oswald';
 	font-size: 28px;
-	text-align: bottom;
 	color: white;
+	/*text-align: bottom;*/
+}
+
+.footer-1 span {
+	position: absolute;
+	bottom: 15px;
+	margin-left: 19px;
+	margin-right: 20px;
+	margin-bottom: 104px;
 }
 
 /*.footer-1:hover {
@@ -291,7 +298,17 @@ h3 {
 	width: 25%;
 	height: 330px;
 	background-image: url(http://blogs.citypages.com/food/beer.flight%20400x300.jpg);
-	
+	font-family: 'Oswald';
+	font-size: 28px;
+	color: white;
+}
+
+.footer-2 span {
+	position: absolute;
+	bottom: 119px;
+	margin-left: 19px;
+	margin-right: 20px;
+	/*margin-bottom: 104px;*/
 }
 
 .footer-3 {
@@ -299,6 +316,16 @@ h3 {
 	width: 25%;
 	height: 330px;
 	background-image: url(http://images.contactmusic.com/newsimages/zach_galifianakis_627199.jpg);
+	font-family: 'Oswald';
+	font-size: 28px;
+	color: white;
+}
+
+.footer-3 span {
+	position: absolute;
+	bottom: 119px;
+	margin-left: 19px;
+	margin-right: 20px;
 }
 
 .footer-4 {
@@ -306,14 +333,42 @@ h3 {
 	width: 25%;
 	height: 330px;
 	background-image: url(http://loriannryan.zenfolio.com/img/s3/v40/p334229174-3.jpg);
+	font-family: 'Oswald';
+	font-size: 28px;
+	color: white;
 }
 
+.footer-4 span {
+	position: absolute;
+	bottom: 119px;
+	margin-left: 19px;
+	margin-right: 20px;
+}
 .footer-nav {
 	width: 100%;
 	height: 97px;
 	background: #083452;
 	display: inline-block;
 	vertical-align: bottom;
+}
+
+.footer-nav span {
+	font-family: 'Asap';
+	font-size: 14px;
+	color: #a3b3bf;
+	display: inline-block;
+	padding-top: 40px;
+	margin-left: 222px;
+}
+
+.footer-nav li {
+	font-family: 'Asap';
+	font-size: 14px;
+	color: #a3b3bf;
+	display: inline-block;
+	position: absolute;
+	padding-top: 40px;
+	margin-left: 293px;
 }
 
 
